Last Update website vesrion 1.0 in english language

--- a/contact.html
+++ b/contact.html
@@ -72,14 +72,12 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="title-column">
-                        <h4 class="custom-heading text-center">Title Lorem Test</h4>
+                        <h4 class="custom-heading text-center">Contact Us</h4>
                     </div>
                     <div class="description-paragraph">
                         <p class="text-center">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Recusandae soluta ex harum, laudantium quam illum iusto. 
-                            Accusantium dignissimos, est illo quaerat autem culpa quo 
-                            minus aperiam voluptate, velit sed aut?
+                            Through the above from you cna send a message and contact us in case you have any questions
+                            or requests, we are at your service .
                         </p>
                     </div>
 
@@ -100,14 +98,14 @@
 
     <!-- Star Choose a teacher -->
     <section class="Contact" id="Contact">
-        <div class="title_section">
+
+        <!-- <div class="title_section">
             <h3 class="text-center">Contact Us</h3>
         </div>
 
-        <div class="line"></div>
-
+        <div class="line"></div> -->
         
-        <div class="container">
+        <!-- <div class="container">
             <div class="small-description">
                 <p class="text-center">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -117,7 +115,7 @@
                 </p>
             </div>
             <hr>
-        </div>
+        </div> -->
 
         <div class="container">
             <div class="row">
@@ -128,7 +126,7 @@
                 
                 <hr>
 
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <div class="description-msg">
                         <p class="text-center">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -137,7 +135,7 @@
                             officiis dolorum culpa nesciunt corrupti harum.
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <hr>
@@ -213,8 +211,9 @@
 
                    <div class="about-description">
                        <p class="text">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                           Magnam sit est voluptatem facilis ducimus necessitatibus.
+                        Mudarris.net is a premium Online Academy that seeks to provide the best in the 
+                        academic learning field, That brings the high-quality experience of private school 
+                        education to a user-friendly online environment.
                        </p>
                    </div>
 
